# risk-scoring-system

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  verify_pipeline.py
.github/workflows/: ci.yml
artifacts/metrics/: comparison.csv
configs/: config.yaml  logging.yaml
docs/: architecture.md  modeling_decisions.md  scoring_logic.md
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_explainability.ipynb
reports/: model_report.md
src/: __init__.py
src/api/: app.py  schemas.py
src/explainability/: shap_analysis.py
src/features/: feature_store.py
src/ingestion/: load_data.py
src/models/: calibrate.py  evaluate.py  predict.py  registry.py  train.py
src/monitoring/: data_quality.py  drift.py  reporting.py
src/pipelines/: batch_scoring_pipeline.py  train_pipeline.py
src/processing/: preprocess.py  split.py
src/utils/: logger.py  paths.py
src/validation/: data_checks.py
tests/: conftest.py  test_api.py  test_data.py  test_monitoring.py  test_predict.py  test_preprocess.py  test_train.py
