[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "risk-scoring-system"
version = "1.0.0"
description = "Explainable credit risk scoring system with model calibration, monitoring, and API serving"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "*.egg-info", "data/", "artifacts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
